Fix css che previene il wrapping su più righe della label selezionata di una select.

--- a/web/css/source/components/_dropdowns.less
+++ b/web/css/source/components/_dropdowns.less
@@ -65,6 +65,11 @@
                 }
             }
         }
+        .action.toggle{
+            overflow: hidden;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+        }
         .required & .dropdown-label:after{
             content:'*';
         }
